Fixed lang menu getting overlapped by content

--- a/static/assets/sass/partials/_header.sass
+++ b/static/assets/sass/partials/_header.sass
@@ -6,6 +6,7 @@
 .header
   display: flex
   position: fixed
+  z-index: 99999
   top: 0
   left: 0
   right: 0
